// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomWebview should render correctly on Android 1`] = `
<Component
  style={
    Object {
      "flex": 1,
    }
  }
>
  <_class
    javaScriptEnabled={true}
    key="webViewKey"
    messagingEnabled={false}
    onLoadingError={[Function]}
    onLoadingFinish={[Function]}
    onLoadingStart={[Function]}
    onMessage={[Function]}
    originWhitelist={
      Array [
        "http://.*",
        "https://.*",
      ]
    }
    saveFormDataDisabled={false}
    scalesPageToFit={true}
    source={Object {}}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
    thirdPartyCookiesEnabled={true}
  />
</Component>
`;

exports[`CustomWebview should render correctly on iOS 1`] = `
<Component
  style={
    Object {
      "flex": 1,
    }
  }
>
  <_class
    key="webViewKey"
    messagingEnabled={false}
    onLoadingError={[Function]}
    onLoadingFinish={[Function]}
    onLoadingStart={[Function]}
    onMessage={[Function]}
    onProgress={[Function]}
    onScroll={[Function]}
    source={Object {}}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "backgroundColor": "#ffffff",
        },
        undefined,
      ]
    }
  />
</Component>
`;
